--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: 'Inter', sans-serif;
+    /* CAMBIO: Se ha cambiado la fuente Inter por Lora */
+    font-family: 'Lora', serif;
     background-color: #f0f2f5;
     color: #333;
     overflow-x: auto;
